# dropshipping_orders

./: manage.py  pyproject.toml  readme.md
bot/: admin.py  config.py  models.py
bot/filters/: filters.py
bot/handlers/users/: create_order.py  personal_cabinet.py  registration.py  start.py
bot/keyboards/base/: reply.py
bot/keyboards/inline/: order_kb.py  user_profile_kb.py
bot/management/commands/: runbot.py
bot/middlewares/: middleware.py  size.py
bot/migrations/: 0001_initial.py
bot/utils/: check.py  commands.py  db.py  nova_post_api.py  statesform.py
dropshipping_orders/: asgi.py  settings.py  urls.py  wsgi.py
