[tool.poetry]
name = "dropshipping-orders"
version = "0.1.0"
description = ""
authors = ["V_Kovshov <ssevenn41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
aiofiles = "23.*"
aiogram = "3.0.0b7"
aiohttp = "3.8.6"
aiosignal = "1.3.1"
asgiref = "3.7.2"
async-timeout = "4.0.3"
attrs = "23.1.0"
certifi = "2023.7.22"
charset-normalizer = "3.3.2"
Django = "4.2.3"
django-debug-toolbar = "4.2.0"
django-extensions = "3.2.3"
environs = "9.5.0"
frozenlist = "1.4.0"
idna = "3.4"
magic-filter = "1.0.12"
marshmallow = "3.20.1"
multidict = "6.0.4"
packaging = "23.2"
Pillow = "10.0.0"
pydantic = "^1.10.13"
python-dotenv = "1.0.0"
redis = "^4.6.0"
sqlparse = "0.4.4"
typing_extensions = "4.8.0"
yarl = "1.9.2"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
